* Change the version in inits banner to come from the GUI.
* Init's are now truly native with dns pulling.
* Added to inits to check for has_usb_nic flag which simply tells the system
to wait for the user to unplug and replug their usb nics.
* Update init.xz/init_32.xz to 2014.11 and update kernel infos to 3.16.1
within the inits
* Add FTP enable/disable for server sizes of images.
* Add elements to allow mass deletion of items from relevant management pages.
* Add jquery to read log files.
* Add Apache error and access logs to the log viewer elements.
* Add capability to only filter logs if they exist.
* Add jquery script to allow quickreg_img_id to dynamically update the os for
the selected image.
* Add protection flag to image files.
* Add installer files from David Fear to fog to allow FOG Installation on
Arch Linux.
* Add partition imaging selection options into GUI and fog to operate within.
* Add ipxe support for Apple EFI and better generalized EFI support.  Special
thanks to Michael Brown, the iPXE team, and Curtis Larsen for taking the time
to debug and correct and make this work.
* Add ipxeTable element to read the ipxe file and information to let us get
some kind of database of known working/troublesome systems.
* Add support for Apple Mac OS support in our systems.
* Add initial support for torrent casting.  Only works for resizable.
* Adjust bootmenu to store to variables.  This can then allow hooks to
interact with the boot menu setup for customizations as needed.
* Adjust the menu items to go into database to allow adding own custom
options that stay even if updated.
* Add ability to customize iPXE Menu items besides our main defaults. May
think about allowing editing but for now we'll just try the adding custom
entries.  The first twelve items are only editable to be adjusted by default
item or what menu they display in.
* Inject the Boot Items into HookManager by means of array push.  This should